--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 .container {
-    width: 50%;
+    width: 90%;
+    max-width: 700px;
     /* height: 500px; */
     margin: 10px auto;
     /* border: 1px solid black; */ 
