--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,10 +5,9 @@
  */
 
  .container {
-  width: 50%;
-  /* height: 500px; */
+  width: 90%;
+  max-width: 700px;
   margin: 10px auto;
-  /* border: 1px solid black; */ 
 }
 .messages {
   height: 60vh;
