--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,8 @@
-/* *{
-  margin: 0;
-  padding: 0;
+html, body, .app {
+  min-height: 100vh;
+  padding: 1rem;
+  /* background-color: #eee; */
 }
- */
 
  .container {
   width: 90%;
