--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,13 @@
-html, body, .app {
-  min-height: 100vh;
-  padding: 1rem;
+html, body, .App {
+  min-height: 90vh;
+  max-height: 90vh;
+  /* height: none; */
+  /* padding: .2rem; */
+  margin: 0;
   /* background-color: #eee; */
 }
+
+
 
  .container {
   width: 90%;
@@ -16,10 +21,12 @@ html, body, .app {
 }
 .message__form {
   /* position: fixed !important; */
-  bottom: 1em;
-  /* margin-left: 320px !important; */
-  left: 0;
-  right: 1em;
+  /* bottom: 1em; */
+  /* width: 90%; */
+  /* max-width: 700px; */
+  /* margin: 320px !important; */
+  /* left: 0;
+  right: 1em; */
   z-index: 200;
 }
 .message__self {
