--- a/frontend/src/Chat/Chat.module.css
+++ b/frontend/src/Chat/Chat.module.css
@@ -19,6 +19,7 @@
     position: absolute;
     top: 0;
     right: 0;
+    z-index: 10;
   }
 
   .divCloseLinkPanel {
@@ -28,5 +29,6 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 10;
   }
 }
