--- a/frontend/src/sidePanel/sidePannel.module.css
+++ b/frontend/src/sidePanel/sidePannel.module.css
@@ -41,6 +41,7 @@
         position: absolute;
         top: 0;
         left: 0;
+        z-index: 10;
     }
     .sidePanelNone {
         display: none;
